style: add other cards + fix wrap

--- a/css/style.css
+++ b/css/style.css
@@ -106,7 +106,7 @@ header a {
 }
 .wrap {
     flex-wrap: wrap;
-    gap: 20px 12px;
+    gap: 20px 2%;
 }
 
 
@@ -153,7 +153,7 @@ header .link-icons-box figure img {
 
 /* product card */
 .product-card {
-    flex-basis: calc(100% / 3);
+    flex-basis: calc((100% / 3) - 2%);
 }
 /* vard img (relative) */
 .product-card figure {
